test/files/neg/t9014.check
t9014.scala:4: error: Inner is already defined as case class Inner
    case class Inner(default: T)
               ^
1 error
